--- a/ChangeLog
+++ b/ChangeLog
@@ -12,9 +12,10 @@ REVISION HISTORY
 ================
 
 ------------------
-2015-04-17
-first package
+2015-04-23  fix STL loader
 
 ------------------
-2015-04-13
-initial commit
+2015-04-17  first package
+
+------------------
+2015-04-13  initial commit
